...

    const result = await addPatientMobilityV1(patientID, tempMobilityFormData);
    if (result.ok) {
      console.log('submitting mobility aid data', tempMobilityFormData);
      refreshMobilityData();
      setIsModalVisible(false);
      alertTitle = 'Successfully added mobility aid';
    } else {
      const errors = result.data?.message;
      console.log(result);
      result.data
        ? (alertDetails = `\n${errors}\n\nPlease try again.`)
        : (alertDetails = 'Please try again.');
...
    let alertDetails = '';

    const result = await updatePatientMobilityV1(patientID, tempFormData);
    if (result.ok) {
      refreshMobilityData();
      setIsModalVisible(false);
      alertTitle = 'Successfully edited mobility aid';
    } else {
      const errors = result.data?.message;
      console.log('Error editing mobility aid');
      result.data
        ? (alertDetails = `\n${errors}\n\nPlease try again.`)
        : (alertDetails = 'Please try again.');
...

  // Ask user to confirm deletion of mobility aid
  const handleDeleteMobilityAid = (mobilityID) => {
    const tempData = mobilityData.filter((x) => x.mobilityId == mobilityID)[0];

    Alert.alert(
      'Are you sure you wish to delete this item?',
      `Mobility Aid: ${tempData.mobilityListDesc}\n` +
        `Remark: ${tempData.mobilityRemark}\n` +
        `Condition: ${
          tempData.isRecovered ? 'Fully Recovered' : 'Not Recovered'
        } \n` +
        `Date: ${formatDate(new Date(tempData.date), true)}`,
      [
        { text: 'Cancel', onPress: () => {}, style: 'cancel' },
        { text: 'OK', onPress: () => deleteMobilityAid(mobilityID) },
      ],
    );
  };

  // Delete mobility aid (v1)
  const deleteMobilityAid = async (mobilityID) => {
...
    let alertDetails = '';

    const result = await deletePatientMobilityV1(patientID, mobilityID);
    if (result.ok) {
      refreshMobilityData();
      setIsModalVisible(false);
      alertTitle = 'Successfully deleted mobility aid';
    } else {
      const errors = result.data?.message;
      console.log('Error deleting mobility aid', result);
      result.data
        ? (alertDetails = `\n${errors}\n\nPlease try again.`)
        : (alertDetails = 'Please try again.');
...
          height={'72%'}
          ListEmptyComponent={() =>
            noDataMessage(
              statusCode,
              isLoading,
              isError,
              'No mobility aids found',
              true,
            )
          }
          data={mobilityData}
          keyboardShouldPersistTaps="handled"
          keyExtractor={(item) => item.mobilityId}
...
