...
        onPress={() => {
          if (Platform.OS !== 'web' || navigator.userAgent.includes('Mobile')) {
            Keyboard.dismiss();
          }
        }}
      >
        <View testID={'loginContentContainer'} style={styles.overlay}>
          <Center flex={1} style={styles.formContainer}>
            <View style={styles.credentialsContainer}>
              <View style={styles.logoContainer}>
                <Image
                  source={require('../assets/pear_v2.png')}
                  style={styles.logo}
...
                  <LoadingWheel />
                ) : (
                  <AppButton
                    title="Login"
                    color="green"
                    onPress={onPressLogin}
                    testID="login"
                    //isDisabled={isInputErrors} //for login button validation
                  />
                )}
              </View>
              <Box>
                {isError ? (
...
              </Box>
              <View>
                <Text
                  style={styles.forgotPassword}
                  onPress={() => navigation.navigate(routes.RESET_PASSWORD)}
                >
                  Forgot Password?
                </Text>
              </View>
            </View>
          </Center>
        </View>
      </TouchableWithoutFeedback>
...
